
syntax = "proto3";

package dfs;

option go_package = "github.com/Eldrago12/DistributedFileSystem/proto";

service DFSService {
  rpc UploadFile(UploadFileRequest) returns (UploadFileResponse);
  rpc DownloadFile(DownloadFileRequest) returns (DownloadFileResponse);
}

message UploadFileRequest {
  string filename = 1;
  bytes data = 2;
}

message UploadFileResponse {
  bool success = 1;
  string message = 2;
}

message DownloadFileRequest {
  string filename = 1;
}

message DownloadFileResponse {
  bool success = 1;
  string message = 2;
  bytes data = 3;
}
